# xerppy-core

./: .env.example  .flaskenv  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.ps1  setup.sh
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  xerppy.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_auth_schema.py
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/db/: connection.py
backend/app/modules/: __init__.py
backend/app/modules/ai/: __init__.py  factory.py  knowledge.py  router.py
backend/app/modules/ai/config/: __init__.py  agents.py  agents.yaml  tasks.py  tasks.yaml
backend/app/modules/ai/flows/: __init__.py  base_flow.py  example_flow.py
backend/app/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/scripts/: __init__.py  create_admin.py
backend/app/utils/: __init__.py
core/: __init__.py  app.py  extensions.py  models.py
core/ai/: __init__.py  crew.py  crew_manager.py  database_query_tool.py  llm_factory.py
core/ai/config/: agents.yaml  crews.yaml  tasks.yaml
core/plugins/: __init__.py  manager.py  sample.py
docker/: Dockerfile  docker-compose.yml
docs/: crewai.md
docs/database/: alembic-db-migration-setup.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  LoginPage.tsx  Settings.tsx
frontend/src/services/: api.ts  authService.ts
