[project]
name = "xerppy"
version = "0.1.0"
description = "Production-grade full-stack Python ERP framework"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "flask-login==0.6.3",
    "flask-ldap3-login==0.9.16",
    "authlib==1.3.1",
    "crewai[tools]==0.80.0",
    "gunicorn==23.0.0",
    "pymysql==1.1.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "ldap3==2.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.9.4",
    "mypy==1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.uv.scripts]
xerppy-setup = "flask db upgrade && flask seed"
dev = "flask run --debug"
prod = "gunicorn -w 4 -b 0.0.0.0:8000 app.main:app"
